--- a/index.html
+++ b/index.html
@@ -223,10 +223,25 @@
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-md-6 col-lg-6">
+          <div class="col-md-6 col-lg-4">  <!-- edit "col-lg-4" can change width, like "col-lg-6" -->
             <div class="block-pricing">
               <div class="table">
-                <h4>monthly</h4>
+                <h4>bi-weekly signal</h4>
+                <h2>Free</h2>
+                <ul class="list-unstyled">
+                  <li>Limited Availability</li>
+                </ul>
+                <div class="table_btn">
+                  <a href="https://forms.gle/8oRng2FM9QGh9biJ9" class="btn"><i class="fa fa-shopping-cart"></i>Subscribe</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="block-pricing">
+              <div class="table">
+                <h4>daily signal, pay monthly</h4>
                 <h2>$59.99</h2>
                 <ul class="list-unstyled">
                   <li><b>$1.99</b>per day</li>
@@ -238,10 +253,10 @@
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-6">
+          <div class="col-md-6 col-lg-4">
             <div class="block-pricing">
               <div class="table">
-                <h4>yearly</h4>
+                <h4>daily signal, pay yearly</h4>
                 <h2>$459.99</h2>
                 <ul class="list-unstyled">
                   <li><b>$1.26</b>per day</li>
