Make free subscription loading a little faster

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                   <li>Limited Availability</li>
                 </ul>
                 <div class="table_btn">
-                  <a href="https://forms.gle/8oRng2FM9QGh9biJ9" class="btn"><i class="fa fa-shopping-cart"></i>Subscribe</a>
+                  <a href="https://docs.google.com/forms/d/e/1FAIpQLScwZYT5HwgNsPhnDWMh8avHhX5p_byEu45VkUvliv9B7AF9pw/viewform" class="btn"><i class="fa fa-shopping-cart"></i>Subscribe</a>
                 </div>
               </div>
             </div>
