Remove coupon section, adjust font

--- a/subscription.html
+++ b/subscription.html
@@ -70,6 +70,7 @@
           <h3><a href="https://www.patreon.com/risk_panda">Patreon.com/risk_panda</a>  &nbsp;(click the link to continue)</h3>
         </p>
 
+        <!--
         <p>
           <h4>If you have a coupon code:</h4>
           <form onsubmit="">
@@ -81,9 +82,10 @@
           <span id="message"></span>
           <span id="err"></span>
         </p>
+        -->
 
         <p>
-          <h3>The signal emails are not shown on the Patreon's page.
+          <h3>The signal emails are <i><b>not</b></i> shown on the Patreon's page.
           Instead, they will be sent to member's email address directly on each trading day.</h3>
         </p>
         <p>
