--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
 
 <head>
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-213746641-1"></script>
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PH7QEJSFED"></script>
+
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
+    gtag('config', 'UA-213746641-1');
     gtag('config', 'G-PH7QEJSFED');
   </script>
+
 
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
