--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <div class="block-pricing">
               <div class="table">
                 <h4>bi-weekly signal</h4>
-                <h2>Free（免費）</h2>
+                <h2>Free (免費)</h2>
                 <ul class="list-unstyled">
                   <li>Limited Availability</li>
                 </ul>
