Add quotation marks

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <!-- ======= Image Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Hedge Fund for Everyone</h1>
+      <h1>"Hedge Fund" for Everyone</h1>
       <h2>Simple trading signal, delivered daily</h2>
       <img src="assets/img/cagr.png" alt="cagr" data-aos="zoom-out" data-aos-delay="100" width="1200">
       <a href="#pricing" class="btn-get-started scrollto">FREE Trial</a>
