Add two more images to brand gallery

--- a/brand_gallery.html
+++ b/brand_gallery.html
@@ -81,6 +81,7 @@
     <section>
 
       <div>
+        <!-- for small images, all the widths are 278 -->
         <a class="risk-panda-gallery" href="images/risk_panda_phone_case.png" data-lightbox="risk-panda-gallery" data-title="Phone Case"><img class="risk-panda-gallery" src="images/risk_panda_phone_case_small.png" alt="image" /></a>
         <br>
         <br>
@@ -98,6 +99,14 @@
         <br>
         <br>
         <a class="risk-panda-gallery" href="images/writing.jpg" data-lightbox="risk-panda-gallery"><img class="risk-panda-gallery" src="images/writing_small.png" alt="image"/></a>
+        <br>
+        <br>
+        <br>
+        <a class="risk-panda-gallery" href="images/risk_panda_billboard.jpg" data-lightbox="risk-panda-gallery"><img class="risk-panda-gallery" src="images/risk_panda_billboard_small.jpg" alt="image"/></a>
+        <br>
+        <br>
+        <br>
+        <a class="risk-panda-gallery" href="images/risk_panda_mall_wall.jpg" data-lightbox="risk-panda-gallery"><img class="risk-panda-gallery" src="images/risk_panda_mall_wall_small.jpg" alt="image"/></a>
         <br>
         <br>
         <br>
