--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <h4>bi-weekly signal</h4>
                 <h2>Free (免費)</h2>
                 <ul class="list-unstyled">
-                  <li>Limited Availability</li>
+                  <li>No Registration Required</li>
                 </ul>
                 <div class="table_btn">
                   <a href="https://docs.google.com/forms/d/e/1FAIpQLScwZYT5HwgNsPhnDWMh8avHhX5p_byEu45VkUvliv9B7AF9pw/viewform" class="btn"><i class="fa fa-shopping-cart"></i>Subscribe</a>
