--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                   <li>No Registration Required</li>
                 </ul>
                 <div class="table_btn">
-                  <a href="https://docs.google.com/forms/d/e/1FAIpQLScwZYT5HwgNsPhnDWMh8avHhX5p_byEu45VkUvliv9B7AF9pw/viewform" class="btn"><i class="fa fa-shopping-cart"></i>Subscribe</a>
+                  <a href="biweekly_subscribe.html" class="btn"><i class="fa fa-shopping-cart"></i>Subscribe</a>
                 </div>
               </div>
             </div>
