Add Spam reminder

--- a/biweekly_subscribe.html
+++ b/biweekly_subscribe.html
@@ -105,17 +105,26 @@
         <p><br></p>
 
         <p>We will share our position size every two weeks, half an hour before market close on Friday.<br>
-          Please ensure your email address is correct to receive signals.</p>
+          Please ensure your email address is correct to receive signals.<br>
+          Since we have a large audience, please also <b style="color:red;">check your Spam folder</b> or "Promotions" tab (Gmail) for signal emails.<br>
+          If you find it in the Spam folder, please "Report Not Spam" to receive future signals.
+        </p>
 
         <hr>
 
         <p>仓位信号每两周发一次，周五收盘前半小时左右。<br>
-          请确认邮件地址正确，以便能收到信号。</p>
+          请确认邮件地址正确，以便能收到信号。<br>
+          <b style="color:red;">请检查邮箱的垃圾邮件(Spam)</b>，或者Gmail的"Promotions" tab, 看邮件是否在里面。<br>
+          假如确实被归为垃圾邮件，请点击"Report Not Spam"按钮以收到之后的邮件。
+        </p>
 
         <hr>
 
         <p>倉位信號每兩週發一次，週五收盤前半小時左右。<br>
-          請確認郵件地址正確，以便能收到信號。</p>
+          請確認郵件地址正確，以便能收到信號。<br>
+          <b style="color:red;">請檢查郵箱的垃圾郵件(Spam)</b>，或者Gmail的"Promotions" tab, 看郵件是否在裡面。 <br>
+          假如確實被歸為垃圾郵件，請點擊"Report Not Spam"按鈕以收到之後的郵件。
+        </p>
 
         <p><br></p>
 
